[package]
name = "http_desync_guardian"
version = "0.1.3"
authors = ["Eugene Retunsky <retunsky@gmail.com>"]
edition = "2018"
publish = true
license = "Apache-2.0"
description = "HTTP/1.1 request analysis to prevent HTTP Desync attacks"
repository = "https://github.com/aws/http-desync-guardian"
readme = "README.md"
homepage = "https://github.com/aws/http-desync-guardian"
keywords = ["http-desync", "http-smuggling"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "http_desync_guardian"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
lazy_static = "1.4"
smallvec = "1.2"
strum = "0.18"
strum_macros = "0.18"

[dev-dependencies]
yaml-rust = "0.4"
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[features]
# Introduce to avoid inlining methods during coverage calculation.
coverage = []

